--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -8,13 +8,16 @@
 
 \maketitle
 
-\section{Introduction}
+\section{Motivation}
 
 \begin{itemize}
-  \item Commerce on the Internet relies almost exclusively on financial
-    institutions serving as trusted third parties to process electronic
-    payments.
-  \item Problem: TODO
+  \item Situation: commerce on the Internet relies almost exclusively on
+    financial institutions serving as trusted third parties to process
+    electronic payments.
+  \item Problem: such third parties may not be trustworthy.
+  \item Goal: develop a decentralized version of electronic cash that would
+    allow online payments to be sent directly from one party to another without
+    going through a financial institution.
 \end{itemize}
 
 \section{Digital Signatures}
@@ -44,14 +47,74 @@
   \item Electronic coin: a chain of digital signatures.
   \item Alice transfers a coin to Bob:
     \begin{enumerate}
-      \item Alice computes the hash of previous transaction and Bob's public
-        key.
+      \item Alice computes the hash of the previous transaction and Bob's public
+        key. % TODO: maybe describe transaction
       \item Alice signs the hash using her private key.
       \item Alice adds her signature to the end of the coin.
-      \item Bob verifies that Alice transferred a coin to him using Alice's
-        public key.
     \end{enumerate}
-  \item Problem: how to verify that Alice did not double-spend the coin?
+  \item Bob can verify that Alice transferred a coin to him using Alice's public
+    key.
+  \item Problem: how to verify that Alice did not double-spend the coin? For
+    example, Alice could have transferred a coin to Charlie and then transferred
+    the same coin to Bob. For our purposes, the earliest transaction is the one
+    that counts, so we should ignore later attempts to double-spend. As of now,
+    there is no mechanism preventing Alice from double-spending.
+  \item To accomplish this without a trusted party, transactions must be
+    publicly announced, and we need a system for participants to agree on a
+    single history of the order in which they were received. Bob needs proof
+    that at the time of the transaction, the majority of nodes agreed it was the
+    first received.
+  \item Solution: a distributed timestamp server with proof-of-work.
+\end{itemize}
+
+\section{Timestamp Serve}
+
+\begin{itemize}
+  \item Take a hash of a block of transactions to be timestamped and widely
+    publishing the hash.
+  \item The timestamp proves that the data must have existed at the time,
+    obviously, in order to get the hash.
+  % TODO
+\end{itemize}
+
+\section{Cryptographic Hash Functions}
+
+\begin{itemize}
+  \item $\mathsf{SHA256(message) = hash}$.
+  \item Input: message.
+  \item Output: String of 256 bits, known as the hash of the message.
+  \item The output looks random even though it isn't (i.e., the function always
+    gives the same output for a given input).
+  \item Slightly changing the input results in the output to change completely
+    in an unpredictable way.
+  \item Infusible to compute in the reverse direction. Given only the output,
+    finding the input that hashes to the output is extremely difficult. There is
+    no better method than to guess and check. Need to go through $2^{256}$
+    guesses.
+\end{itemize}
+
+\section{Proof-of-Work}
+
+\begin{itemize}
+  \item % TODO
+\end{itemize}
+
+\section{Network}
+
+\begin{itemize}
+  \item The network executes as follows:
+    \begin{enumerate}
+      \item New transactions are broadcast to all nodes.
+      \item Each node collects new transactions into a block.
+      \item Each node works on finding a difficult proof-of-work for its block.
+      \item When a node finds a proof-of-work, it broadcasts the block to all
+        nodes.
+      \item Nodes accept the block only if all transactions in it are valid and
+        not already spent.
+      \item Nodes express their acceptance of the block by working on creating
+        the next block in the chain, using the hash of the accepted block as the
+        previous hash.
+    \end{enumerate}
 \end{itemize}
 
 \end{document}
