--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -18,16 +18,17 @@
   \item Goal: develop a decentralized version of electronic cash that would
     allow online payments to be sent directly from one party to another without
     going through a financial institution.
+  %TODO: add more? How could third parties not be trustworthy?
 \end{itemize}
 
-\section{Digital Signatures}
+\section{Detour: Digital Signatures}
 
 \begin{itemize}
   \item Scenario: Alice wants to send a message to Bob over a network. How can
     Bob verify that the message he received was from Alice? Alice needs to sign
     her message.
   \item Desired property of signature: cannot be forged on a different message.
-  \item Both Alice and Bob each generate a public/private key pair for
+  \item Both Alice and Bob each generate a private/public key pair for
     themselves. Each key is some string of bits. Private keys are kept secret.
   \item Producing a signature: $\mathsf{sign(message, privateKey)} =
     \mathsf{signature}$.
@@ -41,43 +42,86 @@
     $2^{256}$ signatures to check; this is a very large number.
 \end{itemize}
 
+\section{Bitcoin}
+
+\begin{itemize}
+  \item Bitcoin network: a randomly connected overlay network of a few thousand
+    nodes, controlled by a variety of owners. All nodes perform the same
+    operations, i.e., it is homogeneous network and without central control.
+  \item Users generate private/public key pairs.
+  \item Address: an identifier derived from a user's public key to receive funds
+    in Bitcoin.
+  \item The Bitcoin network collaboratively tracks the balance in bitcoins of
+    each address.
+\end{itemize}
+
 \section{Transactions}
 
 \begin{itemize}
-  \item Electronic coin: a chain of digital signatures.
-  \item Alice transfers a coin to Bob:
-    \begin{enumerate}
-      \item Alice computes the hash of the previous transaction and Bob's public
-        key. % TODO: maybe describe transaction
-      \item Alice signs the hash using her private key.
-      \item Alice adds her signature to the end of the coin.
-    \end{enumerate}
-  \item Bob can verify that Alice transferred a coin to him using Alice's public
-    key.
-  \item Problem: how to verify that Alice did not double-spend the coin? For
-    example, Alice could have transferred a coin to Charlie and then transferred
-    the same coin to Bob. For our purposes, the earliest transaction is the one
-    that counts, so we should ignore later attempts to double-spend. As of now,
-    there is no mechanism preventing Alice from double-spending.
-  \item To accomplish this without a trusted party, transactions must be
-    publicly announced, and we need a system for participants to agree on a
-    single history of the order in which they were received. Bob needs proof
-    that at the time of the transaction, the majority of nodes agreed it was the
-    first received.
-  \item Solution: a distributed timestamp server with proof-of-work.
+  \item Output: a tuple consisting of an amount in bitcoins and a spending
+    condition requiring a valid signature associated with the private key of an
+    address.
+    \begin{itemize}
+      \item Outputs exists in two states: unspent and spent.
+      \item Any output can be spent at most once.
+      \item The address balance is the sum of bitcoin amounts in unspent outputs
+        that are associated with the address.
+      \item The set of unspent transaction outputs (UTXO) and some additional
+        global parameters is the shared state of Bitcoin. Every node in the
+        Bitcon network holds a complete replica of that state. Local replicas
+        may temporarily diverge but consistency is eventually re-established.
+    \end{itemize}
+  \item Input: a tuple consisting of a reference to a previously created output
+    and a signature to the spending condition, proving that the transaction
+    creator has the permission to spend the referenced output.
+  \item Transaction: a data structure that describes the transfer of bitcoins
+    from spenders to recipients. The transaction consists of a number of inputs
+    and new outputs. The inputs result in the referenced outputs spent (removed
+    from the UTXO), and the new outputs being added to the UTXO.\@
+  \item A transaction from Alice to Bob:
+    \begin{itemize}
+      \item Sender: Alice.
+      \item Recipients: Bob.
+      \item Inputs: one or more tuples where each tuple consists of a reference
+        to one of Alice's previously created unspent outputs and Alice's
+        signature using her private key.
+      \item Output: a tuple consisting of the amount in bitcoins for Bob and a
+        spending condition requiring a valid signature associated with the
+        private key of Bob's address.
+    \end{itemize}
+  \item Transactions are broadcast in the Bitcoin network and processed by every
+    node that receives them.
+  \item The outputs of a transaction may assign less than the sum of inputs, in
+    which case the difference is called the transaction's fee. The fee is used
+    to incentivize other participants in the system.
+  \item Transactions are in one of two states: unconfirmed or confirmed. In
+    coming transactions from the broad cast are unconfirmed and added to a pool
+    of transactions called the memory pool.
 \end{itemize}
 
-\section{Timestamp Serve}
+\section{Doublespends}
 
 \begin{itemize}
-  \item Take a hash of a block of transactions to be timestamped and widely
-    publishing the hash.
-  \item The timestamp proves that the data must have existed at the time,
-    obviously, in order to get the hash.
-  % TODO
+  \item Problem: nothing prevents nodes to locally accept different transactions
+    that spend the same output. For example, the transaction from Alice to Bob
+    could have spent the same output as the transaction from Alice to Charlie.
+  \item Doublespend: a situation in which multiple transactions attempt to spend
+    the same output. Only one transaction can be valid since outputs can only be
+    spent once. When nodes accept different transactions in a doublespend, the
+    shared state becomes inconsistent.
+  \item Doublespends can result in an inconsistent state since the validity of
+    transactions depends on the order in which they arrive. If two conflicting
+    transactions are seen by a node, the node considers the first to be valid.
+    The second transaction is invalid since it tries to spend an output that is
+    already present. The order in which transactions are seen may not be the
+    same for all node, hence the inconsistent state.
+  \item If doublespends are not resolved, the shared state diverges. Therefore a
+    conflict resolution mechanism is needed to decide which of the conflicting
+    transactions is to be confirmed (accepted by everybody), to achieve eventual
+    consistency.
 \end{itemize}
 
-\section{Cryptographic Hash Functions}
+\section{Detour: Cryptographic Hash Functions}
 
 \begin{itemize}
   \item $\mathsf{SHA256(message) = hash}$.
@@ -87,16 +131,36 @@
     gives the same output for a given input).
   \item Slightly changing the input results in the output to change completely
     in an unpredictable way.
-  \item Infusible to compute in the reverse direction. Given only the output,
+  \item Infeasible to compute in the reverse direction. Given only the output,
     finding the input that hashes to the output is extremely difficult. There is
     no better method than to guess and check. Need to go through $2^{256}$
     guesses.
+  \item However, given the input message, the hash is fast to compute.
 \end{itemize}
 
-\section{Proof-of-Work}
+\section{Proof-of-Work and Blocks}
 
 \begin{itemize}
-  \item % TODO
+  \item Proof-of-Work (PoW): a mechanism that allows a party to prove to another
+    party that a certain amount of computational resource has been utilized for
+    a period of time.
+  \item Block: a data structure used to communicate incremental changes to the
+    local state of a node. A block consists of a list of transactions, a
+    reference to a previous block and a nonce. A block lists some transactions
+    the block creator (``miner'') has accepted to its memory-pool since the
+    previous block. A node finds and broadcasts a block when it finds a valid
+    nonce.
+  \item A valid nonce is a number such that the SHA256 hash of the block begins
+    with a required number of zero bits.
+  \item A node finds a valid nonce for a block by incrementing the nonce from
+    zero and checking if the SHA256 hash begins with the required number of zero
+    bits.
+  \item Once a node finds a valid nonce for a block, the block cannot be changed
+    without redoing the work. As later blocks are chained after it, the work to
+    change the block would include redoing all the blocks after it.
+  \item The PoW also solves the problem of determining representation in
+    majority decision making. The majority decision is represented by the
+    longest chain, which has the greatest PoW effort invested in it.
 \end{itemize}
 
 \section{Network}
@@ -115,6 +179,17 @@
         the next block in the chain, using the hash of the accepted block as the
         previous hash.
     \end{enumerate}
+  \item Nodes always consider the longest chain to be the correct one and will
+    keep working on extending it.
+  \item If two nodes broadcast different versions of the next block
+    simultaneously, some nodes may receive one or the other first. In that case,
+    they work on the first one they received but save the other branch in case
+    it becomes longer; the nodes that were working on the other branch will then
+    switch to the longer one.
+  \item New transaction broadcasts do not necessarily need to reach all nodes.
+    As long as they reach many nodes, they will get into a block before long.
+  \item Block broadcasts are also tolerant of dropped messages. If a node does
+    not receive a block, it will request it when it receives the next block.
 \end{itemize}
 
 \end{document}
