Add overview of Bitcoin.

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -2,7 +2,7 @@
 
 \usepackage{hyperref}
 
-\title{COSC-373: Bitcoin}
+\title{COSC-373 Final Report: Bitcoin}
 \author{Lee Jiaen, Hyery Yoo, and Alexander Lee}
 
 \begin{document}
@@ -52,6 +52,14 @@ case.
 \subsection{Cryptographic Hash Functions}
 
 \section{Bitcoin}
+
+The \emph{Bitcoin network} is a randomly connected overlay network of a few
+thousand nodes, where nodes are controlled by various owners and perform the
+same operation. In other words, the network is a homogeneous network without
+central control. Each user of Bitcoin generates a private/public key pair. A
+user is identified by their \emph{address}, which is derived from their public
+key and used to receive funds in Bitcoin. All nodes in the Bitcoin network work
+together to track each address' balance in bitcoins.
 
 \section{Transactions}
 
