--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -52,9 +52,9 @@ case.
 \subsection{Cryptographic Hash Functions}
 
 A \emph{cryptographic hash function} is a hash function that takes as input data
-(i.e., a \emph{message}) of an arbitrary size and outputs a bit array (i.e.,
-\emph{hash}) of a fixed size. In the case of the SHA256 cryptographic hash
-function, the hash has a length of 256 bits.
+of an arbitrary size, known as the \emph{message}, and outputs a bit array of a
+fixed size, known as the \emph{hash}. In the case of the SHA256 cryptographic
+hash function, the hash has a length of 256 bits.
 
 Cryptographic hash functions ideally should have the following properties.
 First, computing the hash of a given message should be quick. Second, generating
