Remaining sections added.

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -153,10 +153,22 @@ decide which of the conflicting transactions (only one transaction) should be
 accepted by every node to achieve eventual consistency in the network.
 
 \section{Proof-of-Work}
+Bitcoin solves the double-spending problem using \emph{Proof-of-Work} (PoW). PoW is a mechanism in which one party can prove to another that it has spent a specific amount of computational effort by presenting a nonce $x$ (a bitstring) to the PoW function $F_d(c,x)$, where $d$ is the difficulty (a positive number) and $c$ is the challenge (a bitstring). Another party can confirm this PoW by quickly checking that $F_d(c,x) =$ true for the given $x$. 
+In general terms, suppose that Alice and Bob both know a PoW function $F_d(c,x)$ with $d$ and $c$ given. Alice expends a certain amount of computation to find a $x$ such that $F_d(c,x) =$ true. Alice presents her solution $x$ to Bob, and Bob checks the solution by computing $F_d(c,x)$. The PoW function must be defined such that verifying a solution $x$ is fast. Through this process, Alice proves to Bob that she has expended the amount of computational work specified by difficulty $d$.
+
+What does PoW look like in the context of Bitcoin? First, we must understand blocks. A \emph{block} is a data structure that consists of a list of transactions, a reference to a previous block, and a nonce. Reference to previous block links blocks together such that they form a blockchain. A block can be added to a chain by a node (called \emph{mining}) when it collects transactions from the network and finds a valid nonce $x$ that satisfies the Bitcoin PoW function:\newline
+$F_d (c,x) = SHA256(SHA256(c|x)) < 2^{224}/d$\newline
+Simply put, a node must find a value $x$ that, when concatenated with a node-specific challenge $c$ and hashed with the hash function SHA256 twice, returns a hash that starts with a fixed number of zeroes. SHA256 is a cryptographic hash function, so a valid nonce can only be found by iterating over all possible values of $x$, requiring significant computational work to be put in. Suppose Alice is a node who puts in the computational effort to find a valid nonce $x$ and broadcasts the block containing $x$ to other nodes. Alice’s PoW can be verified by another node Bob who sees Alice’s block. Bob is given the values of $c$ and $x$, so he can quickly compute the hash and verify that the result starts with the required number of zeroes.
 
 \section{Network}
+The Bitcoin network operates by each node in the network executing the same set of protocols. All transactions are broadcasted to the network, and every node works on collecting new transactions from the network into a block and finding a valid nonce for the block. When a node finds the valid nonce, it broadcasts the block to the network, adding the block to the end of the chain in effect. When another node in the network learns about the new block, it checks that all transactions in the block are valid. If they are, it accepts the block and works an extending the chain by creating a new block with the hash of the accepted block.
+
+A goal of the Bitcoin network is for all its nodes to agree on a single state of the network. The nodes achieve this by accepting the longest chain they see as the true state of the network. If a node receives two conflicting versions of a block, it works on extending the first block it receives and saves the other block as a branch. If the node later learns that the branch has become longer than the chain it was working on, it switches to extending the branch. Because every block requires PoW in order to be added to the chain, the longest chain in the network represents the greatest amount of collective computational effort, i.e., majority decision. All nodes eventually receive and accept the longest chain, so the network reaches consistency.
+
+Let us now look at how the Bitcoin network solves the doublespending problem. Suppose Alice attempts to doublespend by creating two transactions containing the same output, and the two transactions are collected into two separate blocks, Block 1 and Block 2. If one of the blocks, Block 1, is broadcasted to the network and gets accepted by all nodes before Block 2 is broadcasted, Block 2 is rejected by all nodes because it contains an invalid transaction. Thus, Alice’s doublespending attempt fails. In a more subtle case, suppose that Block 1 and Block 2 are broadcasted to the network (almost) simultaneously. Some of the nodes in the network receive Block 1 first, so they accept Block 1 and reject Block 2. The opposite is true for other nodes in the network. This creates two conflicting chains in the network with some of the nodes working on extending each of the chains. Suppose the majority of nodes accept Block 1. Then the sum of the computational effort put into Block 1’s chain is greater than that for Block 2’s chain, and Block 1’s chain grows faster. Eventually, every node receives this longer chain, and Block 2’s chain becomes rejected by all nodes, leaving only one of Alice’s transactions in the network.
 
 \section{Conclusion}
+We discussed in this report the fundamental structure of Bitcoin and how it solves the doublesepnding problem. Other aspects of Bitcoin include incentivizing miners, reclaiming unnecessary disk space, and combining and splitting values in a transaction. You can read more about these topics in the original Bitcoin paper [Nakamoto, 2008]. Further work aims to increase the rate of transactions  by establishing micropayment channels between two parties outside the blockchain network (https://tik-old.ee.ethz.ch/file/716b955c130e6c703fac336ea17b1670/duplex-micropayment-channels.pdf). Lastly, the introduction of a decentralized system for financial transactions by Bitcoin led to a number of other blockchain-based cryptocurrencies such as Ethereum. You can read about the structure of Ethereum from Ferretti and D’Angelo’s 2019 paper (https://arxiv.org/pdf/1908.11808.pdf). 
 
 \bibliographystyle{plainnat}
 \bibliography{paper.bib}
