Changed citations. Need to fix formatting.

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -168,7 +168,7 @@ A goal of the Bitcoin network is for all its nodes to agree on a single state of
 Let us now look at how the Bitcoin network solves the doublespending problem. Suppose Alice attempts to doublespend by creating two transactions containing the same output, and the two transactions are collected into two separate blocks, Block 1 and Block 2. If one of the blocks, Block 1, is broadcasted to the network and gets accepted by all nodes before Block 2 is broadcasted, Block 2 is rejected by all nodes because it contains an invalid transaction. Thus, Alice’s doublespending attempt fails. In a more subtle case, suppose that Block 1 and Block 2 are broadcasted to the network (almost) simultaneously. Some of the nodes in the network receive Block 1 first, so they accept Block 1 and reject Block 2. The opposite is true for other nodes in the network. This creates two conflicting chains in the network with some of the nodes working on extending each of the chains. Suppose the majority of nodes accept Block 1. Then the sum of the computational effort put into Block 1’s chain is greater than that for Block 2’s chain, and Block 1’s chain grows faster. Eventually, every node receives this longer chain, and Block 2’s chain becomes rejected by all nodes, leaving only one of Alice’s transactions in the network.
 
 \section{Conclusion}
-We discussed in this report the fundamental structure of Bitcoin and how it solves the doublesepnding problem. Other aspects of Bitcoin include incentivizing miners, reclaiming unnecessary disk space, and combining and splitting values in a transaction. You can read more about these topics in the original Bitcoin paper [Nakamoto, 2008]. Further work aims to increase the rate of transactions  by establishing micropayment channels between two parties outside the blockchain network (https://tik-old.ee.ethz.ch/file/716b955c130e6c703fac336ea17b1670/duplex-micropayment-channels.pdf). Lastly, the introduction of a decentralized system for financial transactions by Bitcoin led to a number of other blockchain-based cryptocurrencies such as Ethereum. You can read about the structure of Ethereum from Ferretti and D’Angelo’s 2019 paper (https://arxiv.org/pdf/1908.11808.pdf). 
+We discussed in this report the fundamental structure of Bitcoin and how it solves the doublesepnding problem. Other aspects of Bitcoin include incentivizing miners, reclaiming unnecessary disk space, and combining and splitting values in a transaction. You can read more about these topics in the original Bitcoin paper ~\citep{Nakamoto08}. Further work aims to increase the rate of transactions  by establishing micropayment channels between two parties outside the blockchain network ~\citep{Decker15}. Lastly, the introduction of a decentralized system for financial transactions by Bitcoin led to a number of other blockchain-based cryptocurrencies such as Ethereum. You can read about the structure of Ethereum from Ferretti and D’Angelo’s paper ~\citep{Ferretti19}. 
 
 \bibliographystyle{plainnat}
 \bibliography{paper.bib}
