--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -4,3 +4,22 @@
   year = {2008},
   url = {https://bitcoin.org/bitcoin.pdf}
 }
+
+@misc{ETH,
+title = {Chapter 20: Eventual Consistency & Bitcoin},
+author = {ETH Zurich Principles of Distributed Computing},
+url = {https://disco.ethz.ch/courses/podc_allstars/lecture/chapter20.pdf}
+}
+
+@article{Decker15,
+title = {A Fast and Scalable Payment Network with Bitcoin Duplex Micropayment Channels},
+publisher = {Decker, Christian and Wattenhofer, Roger},
+year = {2015},
+}
+
+@article{Ferretti19,
+title = {On the Ethereum Blockchain Structure: a Complex Networks Theory Perpsective},
+author = {Ferretti, Stefano and D'Angelo, Gabriele},
+year = {2019},
+url = {https://arxiv.org/pdf/1908.11808.pdf}
+}
