--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,25 +1,28 @@
-@article{Nakamoto08,
+@misc{Nakamoto08,
   title = {A peer-to-peer electronic cash system},
   author = {Nakamoto, Satoshi},
   year = {2008},
   url = {https://bitcoin.org/bitcoin.pdf}
 }
 
-@misc{ETH,
-title = {Chapter 20: Eventual Consistency & Bitcoin},
-author = {ETH Zurich Principles of Distributed Computing},
-url = {https://disco.ethz.ch/courses/podc_allstars/lecture/chapter20.pdf}
+@incollection{ETH,
+  title = {Chapter 20: Eventual Consistency \& Bitcoin},
+  author = {ETH Zurich Principles of Distributed Computing},
+  url = {https://disco.ethz.ch/courses/podc_allstars/lecture/chapter20.pdf}
 }
 
-@article{Decker15,
-title = {A Fast and Scalable Payment Network with Bitcoin Duplex Micropayment Channels},
-publisher = {Decker, Christian and Wattenhofer, Roger},
-year = {2015},
+@inproceedings{Decker15,
+  title={A fast and scalable payment network with bitcoin duplex micropayment channels},
+  author={Decker, Christian and Wattenhofer, Roger},
+  booktitle={Symposium on Self-Stabilizing Systems},
+  pages={3--18},
+  year={2015},
+  organization={Springer}
 }
 
-@article{Ferretti19,
-title = {On the Ethereum Blockchain Structure: a Complex Networks Theory Perpsective},
-author = {Ferretti, Stefano and D'Angelo, Gabriele},
-year = {2019},
-url = {https://arxiv.org/pdf/1908.11808.pdf}
+@misc{Buterin14,
+  title = {Ethereum: A Next-Generation Smart Contract and Decentralized Application Platform},
+  author = {Buterin, Vitalik},
+  year = {2014},
+  url = {https://ethereum.org/en/whitepaper/}
 }
